<resources>
    <string name="app_name">My Calculator</string>
    <string name="style_and_theme">StyleAndTheme</string>
    <string name="num0">0</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="nhan">*</string>
    <string name="chia">/</string>
    <string name="bang">=</string>
    <string name="keyC">C</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
</resources>